# llm-training

./: .gitignore  CLAUDE.md  QUICKSTART.md  handoff.md  nohup.out  plan.md  pyproject.toml
config/: chunk_filter.yaml  experiments.yaml  models.yaml  steam_apps.yaml
config/serve/: instances.yaml
config/train/: base_dense_lora.yaml  base_moe.yaml  base_qlora.yaml  chat.yaml  code.yaml  companion.yaml  creative.yaml  fim.yaml  game-dev.yaml  research.yaml  shader.yaml
logs/: dataset_generation.jsonl
scripts/: common.py  curate.py  download.py  eval.py  generate_report.py  merge.py  parse_conversation_exports.py  quantize.py  run_experiments.py  serve.sh  train.py
scripts/generate/: common.py  cron_marketing.sh  export_glyph_shaders.py  extract_github.py  filter_chunks.py  generate_engine_docs.py  generate_lore.py  generate_marketing.py  generate_plans.py  generate_shaders.py  import_hf_shaders.py  model_compare.py  review_repo.py  scrape_bookofshaders.py  scrape_shadertoy.py  screen_repo.py
src/llm_training/: common.py  curate.py  download.py  eval.py  generate_report.py  merge.py  quantize.py  run_experiments.py  train.py
